# MyOwnStandards

scripts/: create_app_icons.bat
templates/: .gitignore
templates/ProjectTemplate/QtProjectTemplate/: Qt项目模板使用指南.md  default_config.yml  default_config_sample.yml
templates/ProjectTemplate/QtProjectTemplate/Project/: CMakeLists.txt
templates/ProjectTemplate/QtProjectTemplate/Project/cmake/: Info.plist.in
templates/ProjectTemplate/QtProjectTemplate/Project/icon/: app.icns
templates/ProjectTemplate/QtProjectTemplate/Project/resources/: app.qrc
templates/ProjectTemplate/QtProjectTemplate/Project/src/: CMakeLists.txt  logo_icon.h  main.cpp  settings.cpp
